# simplescreenrecorder-dpm

./: Makefile.am  configure.ac  simplescreenrecorder.1  simplescreenrecorder.1.in  simplescreenrecorder_0.3.3.orig.tar.gz.delta  simplescreenrecorder_0.3.3.orig.tar.gz.id  ssr-glinject.1  ssr-glinject.1.in
debian/: .git-dpm  changelog  control  copyright  manpages  watch
debian/patches/: 0001-add-keywords-to-desktop-file.patch  0002-add-manpages-for-simplescreenrecorder-ssr-glinject.patch  series
